Fix feedback alignment

--- a/src/pages/FooterPages/Feedback/index.css
+++ b/src/pages/FooterPages/Feedback/index.css
@@ -14,7 +14,6 @@
   flex-direction: column;
   padding: 80px;
   border-radius: 20px;
-  margin-top: 60px;
 }
 
 .feedback_input,
